# libmotion

./: .gitignore  CMakeLists.txt  conanfile.txt
src/libs/math/: CMakeLists.txt
src/libs/math/include/math/: matrix.hpp  real.hpp  vector.hpp
src/libs/motion/: CMakeLists.txt
src/tests/: CMakeLists.txt
src/tests/math/: test_math.cpp
src/tests/motion/: test_motion.cpp
